# UAV-DDPG

./: README.md
apriltags2_ros/config/: tags.yaml
apriltags2_ros/launch/: continuous_detection.launch
drone_training/config/: qlearn_params.yaml
drone_training/src/: ReplayBuffer.py  Untitled.ipynb  actor.py  critic.py  drone_train.py  main_train.py  myquadcopter_env.py  ou_noise.py  realquadcopter_env.py  replay_buffer.py  save_image.py
gimbal/: CMakeLists.txt  package.xml
gimbal/src/: hku_m100_pcsim_gazebo_bridge.cpp
gimbal/worlds/: empty_world_with_tags.world  new.world  vehicle_with_drone.world
uav_sim/: CMakeLists.txt  package.xml
uav_sim/Media/materials/scripts/: tags.material
uav_sim/include/: plugin_drone.h
uav_sim/launch/: simple.launch
uav_sim/models/sjtu_drone/: sjtu_drone.sdf
uav_sim/scripts/: spawn_model
uav_sim/src/: plugin_drone.cpp  plugin_ros_cam.cpp  plugin_ros_imu_native.cpp  plugin_ros_sonar.cpp  spawn_drone.cpp  util_ros_cam.cpp
uav_sim/worlds/: contest.world  gimbal.world
